--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^4.17.11",
-    "mongodb": "^2.2.33",
-    "mongoose": "^4.5.9"
+    "mongodb": "^2.2.5",
+    "mongoose": "^5.4.1",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "expect": "^1.20.2",
